involved in a transaction that hasn't been abort()'ed or commit()'ed).
It was missing the case where the only pending modifications were made
in subtransactions.  This has been fixed.  If an attempt to close a
connection with pending subtransactions is made now,

    ConnnectionStateError: Cannot close a connection with a pending subtransaction

is raised.

transaction
-----------

Growing pains:  ZODB 3.1 and 3.2 had a bug wherein Transaction.begin()
didn't abort the current transaction if the only pending changes were in a
subtransaction.  In ZODB 3.3, it's intended that transaction managers be
used instead of invoking methods directly on Transaction objects, and
calling begin() on a transaction manager didn't have this old bug.  However,
Transaction.begin() still exists in 3.3, and it had a worse bug:  it never
aborted the transaction (not even if changes were pending outside of
subtransactions).  Transaction.begin() has been changed to abort the
transaction, although it's still strongly recommended to invoke begin() on
the relevant transaction manager instead.  For example,

    import transaction
    transaction.begin()

if using the default ThreadTransactionManager (see news for 3.3a3 below).

Tools
-----

FileStorage.FileIterator was confused about how to read a transaction's
user and description fields, which caused several tools to display
binary gibberish for these values.

ZODB.utils.oid_repr() changed to add a leading "0x", and to strip leading
zeroes.  This is used, e.g., in the detail of a POSKeyError exception, to
identify the missing oid.  Before, the output was ambiguous.  For example,
oid 17 was displayed as 0000000000000011.  As a Python integer, that's
octal 9.  Or was it meant to be decimal 11?  Or was it meant to be hex?
Now it displays as 0x11.

fsrefs.py:

    When run with -v, produced tracebacks for objects whose creation was
    merely undone.  This was confusing.  Tracebacks are now produced only